discussion/kv_engine/154669/154669_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Test clang-tidy

Change-Id: I3eb864497cc23df955218b9bab6de8b0d297f895

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-05-28 12:21:51.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-28 13:09:52.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9282/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9282/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9282/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10980/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0103/0157]: test multiple vb compactions with workload...Exceeded maximum wait time of 60000000us waiting for stat "ep_workload_pattern" to be read_heavy (last value:write_heavy) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10980/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10980/ )

Test exceeded the timeout:
[2021-05-28T12:48:34.187Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10980/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30916/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7861/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36200/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9905/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10835/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11243/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18815/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
